# Intersection

./: .env  .gitignore  LICENSE  README.md
AI algorithm/: algorithm.py  api.py  db.py  demo.ipynb  lib.py  pyproject.toml
AI algorithm/docs/jobs/txt/: Backend Developer.txt  Data Scientist.txt  Director of Engineering.txt  IT Project Manager.txt  ITA Data Scientist.txt  ITA Web Developer.txt  Lead Technical Program Manager.txt  Primary English Teacher.txt  Senior Product Manager.txt  Senior Software Developer.txt  Web Developer.txt
AI algorithm/tests/: algorithm_test.py  api_test.py  db_setup.sql  db_test.py  populate_db.ipynb  test_db.sql
Login/: index.php
PHP/: Login.php  Logout.php  RegistrazioneAzienda.php  RegistrazioneUtente.php
Registrazione/: style.css
Utenti/: style.css
WebSite/Errore/: index.php
WebSite/Home/: index.php
WebSite/Login/: style.css
WebSite/Registrazione/: registrazione.php  registrazioneAziendale.php  validaRegistrazioni.js
WebSite/SQL/: database_utenti.sql
WebSite/Utenti/: index.php
WebSite/app/: Login.php  Logout.php  RegistrazioneAzienda.php  RegistrazioneUtente.php  application.php  createJobOffer.php  index.php  indexCreateJobOffer.php  indexE.php  indexErrore.php  indexH.php  indexInfoJobOffer.php  indexJobOffer.php  indexJobOffers.php  indexL.php  indexListJobs.php  indexLogin.php  indexPrivacyPolicy.php  indexRegistrazione.php  indexRegistrazioneAziendale.php  indexU.php  indexUtenti.php  registrazione.php  registrazioneAziendale.php
WebSite/app/CreateJobOffer/: style.css
WebSite/app/Errore/: style.css
WebSite/app/Home/: style.css
WebSite/app/JobOffer/: style.css
WebSite/app/ListJobs/: style.css
WebSite/app/Registrazione/: style.css  validaRegistrazioni.js
WebSite/app/SQL/: database_job_offer.sql  database_utenti.sql
WebSite/app/Utenti/: style.css
WebSite/app/css/: style.css
