[tool.poetry]
name = "Intersection - AI API"
version = "0.1.0"
description = "REST API to interact with the AI algorithm behind the Intersection platform"
authors = ["Alberto Pirillo <alberto.pirillo@mail.polimi.it>"]
readme = "README.md"
license = "MIT"


[tool.poetry.dependencies]
python = "~3.9"
numpy = "^1.24.2"
fastapi = "^0.95.0"
nltk = "^3.8.1"
uvicorn = "^0.21.1"
torch = "^2.0.0"
sentence-transformers = "^2.2.2"
pdfplumber = "^0.9.0"
psycopg2 = "^2.9.6"
python-dotenv = "^1.0.0"
python-multipart = "^0.0.6"


[tool.poetry.group.dev.dependencies]
seaborn = "^0.12.2"
pandas = "^2.0.0"
jupyter = "^1.0.0"
matplotlib = "^3.7.1"
mypy = "^1.2.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"