[tool.poetry]
name = "Intersection - AI API"
version = "0.3.0"
description = "REST API to interact with the AI algorithm behind the Intersection platform"
authors = ["Alberto Pirillo <alberto.pirillo@mail.polimi.it>"]
readme = "README.md"
license = "MIT"


[tool.poetry.dependencies]
python = "~3.9"
numpy = "^1.24.2"
fastapi = "^0.95.0"
nltk = "^3.8.1"
uvicorn = "^0.21.1"
sentence-transformers = "^2.2.2"
pdfplumber = "^0.9.0"
python-dotenv = "^1.0.0"
python-multipart = "^0.0.6"
sqlalchemy = "^2.0.9"
psycopg2 = "^2.9.6"
pandas = "^2.0.0"
torch = [
  { url = "https://download.pytorch.org/whl/cpu/torch-2.0.0%2Bcpu-cp39-cp39-linux_x86_64.whl", markers = "sys_platform == 'linux'" },
  { url = "https://download.pytorch.org/whl/cpu/torch-2.0.0%2Bcpu-cp39-cp39-win_amd64.whl", markers = "sys_platform == 'win32'" }
]


[tool.poetry.group.dev.dependencies]
seaborn = "^0.12.2"
jupyter = "^1.0.0"
matplotlib = "^3.7.1"
mypy = "^1.2.0"
httpx = "^0.24.0"
pytest = "^7.3.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"